# declarativefs

./: LICENSE  README.md  pyproject.toml
declarativefs/: __init__.py  model.py
tests/: test1.py
tests/test/: data.json
